# agent-rally-watcher

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude-plugin/: plugin.json
examples/: consumers.toml  consumers.yaml
src/agent_rally_watcher/: __init__.py  cli.py  cursor.py  daemon.py  dispatch.py  filter.py  watcher.py
src/agent_rally_watcher/installers/: __init__.py  launchd.py
tests/: test_cli.py  test_cursor.py  test_dispatch.py  test_filter.py  test_launchd.py  test_watcher.py
tests/fixtures/: sample_changes.jsonl
